# mcp-oauth-example

./: .dockerignore  .flake8  .gitignore  CLAUDE.md  DOCKER.md  Dockerfile  TESTING.md  client_with_oauth.py  decode.py  docker-build.sh  docker-compose.yml  docker-run.sh  flask_mcp_server.py  logging_config.py  mcp_config.json  mcp_github.py  mcp_oauth_example.py  mcp_server.py  notes.txt  oauth_dynamic_application_no_server.py  pyproject.toml  run_tests.py  test_callback_route.py  test_comprehensive.py  test_decode.py  test_mcp_integration.py  test_mcp_using_claude.sh  test_oauth.sh  test_oauth_mcp.py  test_oauth_updated.py  user_inputs.py
claude-desktop-example/: claude_desktop_config-both.json  claude_desktop_config.json  delete-all-logs.sh  mcp_oauth_example.py  reset-claude-desktop.sh  start-claude-desktop.sh  tail-all-logs.sh
docker-example/: github_docker_example.json  test_github_docker_mcp.sh
static/css/: style.css
templates/: callback.html  decode.html  decode_error.html  home.html
