[project]
name = "mcp-oauth-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "mcp[cli]>=1.12.4",
    "flask>=2.0.3",
    "python-dotenv>=0.19.2",
    "authlib>=1.0",
    "requests>=2.27.1",
    "waitress>=2.1.0",
]

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "pyright>=1.1.403",
    "pytest-asyncio>=1.1.0",
    "pytest-cov>=6.2.1",
    "vulture>=2.14",
]
